# june

./: .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  PLAN.md  README.md  bugs1.md  eslint.config.js  improvement-2.html  improvement-2.md  improvement-4.md  improvement-5.md  improvement-6.md  improvement-7.md  improvement-8.md  index.html  overview.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  e2e.yml  release.yml
agent/: README.md  brain.ts  claude-brain.test.ts  claude-brain.ts  cli.ts  core.test.ts  core.ts  errors.test.ts  errors.ts  openai-brain.test.ts  openai-brain.ts  policy.test.ts  policy.ts  prompt.ts  protocol.test.ts  protocol.ts  run-once.ts  serve.ts  tsconfig.json
e2e/: README.md  package.json  wdio.conf.js
e2e/specs/: smoke.e2e.js
mcp/automation/: server.ts  store.test.ts  store.ts
mcp/files/: paths.ts  server.test.ts  server.ts  tsconfig.json
mcp/lessons/: server.ts  store.test.ts  store.ts
mcp/memory/: server.ts  store.test.ts  store.ts
mcp/saple-bridge-control/: README.md  bridge.test.ts  bridge.ts  mcp.config.example.json  server.ts
mcp/system/: parse.test.ts  parse.ts  server.ts
other-files/: README.md  findings-1.md  findings-11.md  findings-12.md  findings-2.md  findings-3.md  findings-5.md  improvement-1.html  improvement-1.md  improvement-3.html  improvement-3.md  improvement-4.html  improvement-6.html
scripts/: bundle-agent.mjs  fetch-models.mjs  phase1-smoke.ps1
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: .tauri-signing.key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_runner.rs  diagnostics.rs  dictation.rs  fsutil.rs  http.rs  keychain.rs  ledger.rs  lib.rs  logf.rs  main.rs  missions.rs  scheduler.rs  settings.rs  stt.rs  tts.rs
src/app/: AppWindow.test.tsx  AppWindow.tsx  ErrorBoundary.tsx  MapTextarea.test.tsx  MapTextarea.tsx  MissionBoard.tsx  RunsPanel.tsx  SettingsPanel.tsx
src/app/settings/: AutomationSection.tsx  common.ts
src/contract/: contract.test.ts  types.ts  validate.ts
src/contract/examples/: capabilities.json  command-rejected.json  command-success.json  observe.json
src/lib/: actions.test.ts  actions.ts  approval-hooks.ts  approval-ui.tsx  approval-voice.test.ts  approval-voice.ts  diagnostics.test.ts  diagnostics.ts  errorlog.ts  hotkey.test.ts  hotkey.ts  kv-map.ts  latency.test.ts  latency.ts  local-stt.ts  local-tts.test.ts  local-tts.ts  markdown.test.tsx  markdown.tsx  mcp-servers.test.ts  mcp-servers.ts  mic.test.ts  mic.ts  mission-runner.test.ts  mission-runner.ts  missions.test.ts  missions.ts  model-progress.test.ts  model-progress.ts  ort-assets.ts  privacy.test.ts  privacy.ts  providers.test.ts  providers.ts  runs.test.ts  runs.ts  safe-link.ts  schedules.test.ts  schedules.ts  scroll.ts  (+22 more)
src/voice/: VoicePanel.test.tsx  VoicePanel.tsx  mic-ownership.test.ts  mic-ownership.ts  voice-phase.test.ts  voice-phase.ts
src/widget/: WidgetWindow.tsx
