[package]
name = "june"
version = "0.1.0"
description = "June — a local-first voice agent that controls the SAPLE ecosystem (and more) by voice"
authors = ["Saple"]
edition = "2021"

[lib]
name = "june_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2.1"
# STT: Whisper transcription happens in Rust so the API key never crosses the IPC
# boundary to the webview. rustls avoids a native OpenSSL dependency on Windows.
reqwest = { version = "0.12", default-features = false, features = ["multipart", "rustls-tls", "json"] }
# Push-to-talk: a real global hold-to-talk hotkey (Pressed/Released), which a
# terminal harness cannot provide.
tauri-plugin-global-shortcut = "2"
# Dictation injection (Phase 15.4): type the cleaned transcript into the focused
# app via the OS input path (SendInput on Windows). User-initiated PTT only - the
# agent never drives this, so it stays on the right side of PLAN §8.
enigo = "0.2"
# Scheduler (Phase 18.1): local wall-clock (HH:MM / weekday) for "is this run due
# now?". Already in the tree transitively; named here for the Local clock.
chrono = "0.4"
# OS notification when an unattended run finishes or pauses (Phase 18.1/18.2).
tauri-plugin-notification = "2"
# Already in the tree via tauri's runtime; named here for select!/Notify to race a
# synthesis against a barge-in cancel (3.11). No new build cost.
tokio = { version = "1", features = ["macros", "sync"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Opening the app again focuses the existing window instead of starting a second process.
tauri-plugin-single-instance = "2"
# Restore the window's last size/position/maximized state on launch.
tauri-plugin-window-state = "2"
